<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:contentDescription="@string/todo1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:shadowColor="@color/purple_200"
            android:text="@string/signup"
            android:textColor="#FFFFFF"
            app:cornerRadius="4dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/signin"
            android:textColor="#FFFFFF"
            app:cornerRadius="4dp" />

    </LinearLayout>



</RelativeLayout>

