<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chelsea_market"
            android:text="@string/create_an_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:fontFamily="@font/chelsea_market"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chelsea_market"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chelsea_market"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chelsea_market"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chelsea_market"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chelsea_market"
            android:hint="Address"
            android:inputType="textPostalAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chelsea_market"
            android:hint="City"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chelsea_market"
            android:hint="State (Ex. NY)"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chelsea_market"
            android:hint="Zipcode"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/chelsea_market"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            app:cornerRadius="4dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/existingAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/chelsea_market"
            android:text="Already Have an Account ?"
            android:textColor="#FDD835"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createText"
            app:layout_constraintVertical_bias="0.19999999" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>